Add initial HTML structure for portfolio website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vlad — Website Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <!-- HEADER -->
+  <header>
+    <h1>Hi, I'm Vlad</h1>
+    <p>UX Designer & Frontend Developer</p>
+    <p>I design simple and clear user experiences.</p>
+  </header>
+
+  <hr />
+
+  <!-- ABOUT -->
+  <section id="about">
+    <h2>About me</h2>
+    <p>
+      I am a beginner UX designer and Frontend developer. 
+      I am a member of "Outline Studio" and I create simple websites, from a simple idea to code and implementation, 
+      I pay special attention to logic, structure and usability.
+    </p>
+  </section>
+
+  <hr />
+
+  <!-- SKILLS -->
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML</li>
+      <li>CSS (basic)</li>
+      <li>UX Research</li>
+      <li>User Flow</li>
+      <li>Figma (basic)</li>
+      <li>English (A2)</li>
+    </ul>
+  </section>
+
+  <hr />
+
+  <!-- PROJECTS -->
+  <section id="projects">
+    <h2>Projects</h2>
+
+    <article>
+      <h3>Project 1 — Team Landing Page</h3>
+      <p>
+      Project 1 - (in development) Team website for getting to know us - Simple landing page for a small team. 
+      </p>
+      <p><strong>My role:</strong> UX, layout, HTML/CSS</p>
+      <a href="#">View project</a>
+    </article>
+
+    <br />
+
+  </section>
+
+  <hr />
+
+  <!-- CONTACT -->
+  <section id="contact">
+    <h2>=Contacts for contacting me</h2>
+    <p>Email: vladislavdream2011@gmail.com</p>
+    <p>GitHub: github.com/paqoe666</p>
+  </section>
+
+  <hr />
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 Vlad. OUTLINE STUDIO MEMBER. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
 
