--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <!-- CONTACT -->
   <section id="contact">
-    <h2>=Contacts for contacting me</h2>
+    <h2>Contacts for contacting me</h2>
     <p>Email: vladislavdream2011@gmail.com</p>
     <p>GitHub: github.com/paqoe666</p>
   </section>
