--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <footer>
     <p>© 2025 Vlad. OUTLINE STUDIO MEMBER. All rights reserved.</p>
   </footer>
-
+<link rel="stylesheet" href="style.css">
 </body>
 </html>
 
