Enhance header with navigation links and restructure sections
Added navigation links and updated section IDs.

--- a/index.html
+++ b/index.html
@@ -7,20 +7,25 @@
   <title>Vlad — Website Portfolio</title>
 </head>
 <body>
-
+<div class="container">
   <!-- HEADER -->
   <header>
     <h1>Hi, I'm Vlad</h1>
     <p>UX Designer & Frontend Developer</p>
     <p>I design simple and clear user experiences.</p>
+    <a href="#projects">Projects</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
   </header>
 
   <hr />
 
   <!-- ABOUT -->
-  <section id="about">
+  <section id="projects">>
     <h2>About me</h2>
     <p>
+      <div class="cards">
+      <div class="card">
       I am a beginner UX designer and Frontend developer. 
       I am a member of "Outline Studio" and I create simple websites, from a simple idea to code and implementation, 
       I pay special attention to logic, structure and usability.
