Add initial structure for cases.html

--- a/cases.html
+++ b/cases.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Cases — Vlad</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <section class="cases">
+    <h1>UX / Frontend Cases</h1>
+    <p>Selected projects and case studies.</p>
+
+    <div class="case-item">
+      <h2>Project 1 — Team Landing Page</h2>
+      <p>UX / UI / Frontend</p>
+      <p>My role: UX, layout, HTML/CSS</p>
+      <a href="project1.html">View case</a>
+    </div>
+
+  </section>
+
+</body>
+</html>
 
