Add link to view case in project section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       </p>
       <p><strong>My role:</strong> UX, layout, HTML/CSS</p>
       <a href="#">View project</a>
+      <a href="./cases.html">View case</a>
     </article>
 
     <br />
