Add header with navigation link to index
Added a header with a link to navigate back to the index page.

--- a/cases.html
+++ b/cases.html
@@ -5,6 +5,9 @@
   <title>Cases — Vlad</title>
   <link rel="stylesheet" href="style.css">
 </head>
+<header>
+  <a href="./index.html"<Back to cases> </a>
+</header>
 <body>
 
   <section class="cases">
