Update email format in contact section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <!-- CONTACT -->
   <section id="contact">
     <h2>Contacts for contacting me</h2>
-    <p>Email: vladislavdream2011@gmail.com</p>
+    <p>Email: <mailto>vladislavdream2011@gmail.com</mailto></p>
     <p>GitHub: github.com/paqoe666</p>
   </section>
 
