Change project title and update link
Updated project title and link in case studies.

--- a/cases.html
+++ b/cases.html
@@ -13,10 +13,9 @@
     <p>Selected projects and case studies.</p>
 
     <div class="case-item">
-      <h2>Project 1 — Team Landing Page</h2>
+      <h2>Outline Studio — Team Landing Page</h2>
       <p>UX / UI / Frontend</p>
       <p>My role: UX, layout, HTML/CSS</p>
-      <a href="project1.html">View case</a>
     </div>
 
   </section>
