Update project title and contact email format

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <h2>Projects</h2>
 
     <article>
-      <h3>Project 1 — Team Landing Page</h3>
+      <h3>Outline Studio — Team Landing Page</h3>
       <p>
-      Project 1 - (in development) Team website for getting to know us - Simple landing page for a small team. 
+      Outline Studio - (in development) Team website for getting to know us - Simple landing page for a small team. 
       </p>
       <p><strong>My role:</strong> UX, layout, HTML/CSS</p>
       <a href="#">View project</a>
@@ -73,7 +73,7 @@
   <!-- CONTACT -->
   <section id="contact">
     <h2>Contacts for contacting me</h2>
-    <p>Email: <mailto>vladislavdream2011@gmail.com</mailto></p>
+    <a href="maito:vladislavdream2011@gmail.com">Email : vladislavdream2011@gmail.com</a>
     <p>GitHub: github.com/paqoe666</p>
   </section>
 
