Fix anchor tag syntax for 'Back to cases' link

--- a/cases.html
+++ b/cases.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
- <a href="./index.html"<Back to cases> </a>
+ <a href="./index.html">Back to cases</a>
   <section class="cases">
     <h1>UX / Frontend Cases</h1>
     <p>Selected projects and case studies.</p>
